# tap-bolddesk

./: README.md  flake.nix  meltano.yml  pyproject.toml  run-tap.sh  tox.ini
.github/workflows/: ci_workflow.yml
tap_bolddesk/: client.py  streams.py  tap.py
tap_bolddesk/tests/: __init__.py  test_core.py
