[tool.poetry]
name = "tap-bolddesk"
version = "0.0.1"
description = "`tap-bolddesk` is a Singer tap for BoldDesk, built with the Meltano SDK for Singer Taps."
authors = ["Stefan Tomm"]
keywords = [
    "ELT",
    "BoldDesk",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.25.1"
singer-sdk = "^0.52.5"
memoization = "^0.4.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_bolddesk"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-bolddesk = 'tap_bolddesk.tap:TapBoldDesk.cli'
